Build JVM-hosted beta pipeline